# Jwufilms-video-editor

./: .gitmodules  README.md
app/: CMakeLists copy.txt  CMakeLists.txt  MyWidget.cpp  MyWidget.h  deploy.bat  main.cpp  mainwindow.ui  videoeditor.pro
app/Debug/: CMakeCache.txt  cmake_install.cmake
app/Debug/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
app/forms/: mainwindow.ui
app/lib/FFmpeg/: CMakeLists.txt
app/src/: load_frame.cpp  main.cpp  video_reader.cpp  video_reader.hpp
